--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "jest-cli": "^27.5.1",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
