--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
     deploy:
       # Deploy to newprd01 with SSH
-      runs-on: [self-hosted, vlcdhprdp01]
+      runs-on: [self-hosted, vlcdhp02]
       strategy: 
         matrix:
             node-version: [16]
