--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -12,9 +12,9 @@ jobs:
       runs-on: [self-hosted, vlcdhp02]
       strategy: 
         matrix:
-            node-version: [16]
+            node-version: [21]
       steps:
-        - uses: actions/checkout@v3
+        - uses: actions/checkout@master
         - run: |
             if [[ ! -e /srv/node/logs/dunbarcms.txt ]]; then
                 mkdir -p /srv/node/logs
