--- a/.github/workflows/dla_cms_tests.yml
+++ b/.github/workflows/dla_cms_tests.yml
@@ -10,16 +10,16 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@master
       # Set up NodeJS
       - name: Setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@master
         with:
-          node-version: "16"
+          node-version: "21"
 
       # Speed up subsequent runs with caching
       - name: Cache node modules
-        uses: actions/cache@v2
+        uses: actions/cache@master
         env:
           cache-name: cache-node-modules
         with:
